run the place script